Fix loading NotifyByExecute

Looks like a copy paste error

CHANGELOG: The "Run Command" notification action has been fixed

BUG: 389284

Differential Revision: https://phabricator.kde.org/D10026